K8s/apicomentarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicomentarios-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicomentarios
  template:
    metadata:
      labels:
        app: apicomentarios
    spec:
      containers:
      - name: apicomentarios
        image: apicomentarios:latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
