K8s/apisolicitudes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apisolicitudes-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apisolicitudes
  template:
    metadata:
      labels:
        app: apisolicitudes
    spec:
      containers:
      - name: apisolicitudes
        image: apisolicitudes:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 8080
