K8s/apiusuarios-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiusuarios-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiusuarios
  template:
    metadata:
      labels:
        app: apiusuarios
    spec:
      containers:
      - name: apiusuarios
        image: apiusuarios:latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
