K8s/apicomentarios-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicomentarios-service
spec:
  selector:
    app: apicomentarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
