K8s/apisolicitudes-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apisolicitudes-service
spec:
  selector:
    app: apisolicitudes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
