K8s/apiusuarios-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: apiusuarios-service
spec:
  selector:
    app: apiusuarios
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
