K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicios-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /apiusuarios(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: apiusuarios-service
            port:
              number: 80
      - path: /api/comentarios(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: apicomentarios-service
            port:
              number: 80
      - path: /api/solicitudes(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: apisolicitudes-service
            port:
              number: 80
